# t4a

./: .renvignore  LICENSE  Makefile  README.md  arquivos_consolidados.txt  barra_progresso.py  pegar_pasta.py  pyproject.toml  results_q1_pairwise.csv  setup_r.R
data/: translations_dataset.json
data/translations_filtered/: intersection_report.txt  intersection_stats.csv
estatisticas/: 0_plot_bleu.py  2_plot_rankings.py  3_test_normalidade.py  4_testes_nao_parametricos.py  5_teste_impacto.py  6_media_impacto.py  7_plot_impacto.py  8_plot_media_impacto.py  analysis.R  desc_by_dual_context.csv  desc_by_single_context.csv  desc_by_source_project.csv  desc_by_treatment_type.csv  experiment.md  experiment_design.md  generate_experiment_csv.py  gerar_scatter_efeito.py  gerar_tabelas.py  histograma.py  plot_bleu.py  plot_bleu_boxplot.py  plot_rankings.py  results_q1_pairwise.csv  results_q1_treatment_means.csv  results_q2_single_context_cld.csv  results_q2_single_pivot_cld.csv  results_q3_dual_context_cld.csv  results_q3_dual_pivot_cld.csv  results_q3_dunnett_vs_best.csv  test_nao_parametricos.py  test_normalidade.py
estatisticas/boxplot/: bleu_descritiva.csv
estatisticas/impacto/: media_global_contextos.csv
estatisticas/nao_parametricos/: comparativo_estatistico.csv  wilcoxon_pareado.csv
estatisticas/normalidade/: aspell_v0.60.8.1_normalidade.csv  bison-runtime_v3.5.90_normalidade.csv  diffutils_v3.10.242_normalidade.csv  exif_v0.6.22_normalidade.csv  gst-plugins-bad_v1.27.90_normalidade.csv  gst-plugins-ugly_v1.27.90_normalidade.csv  gstreamer_v1.27.90_normalidade.csv  gtkspell_v3.0.7_normalidade.csv  libiconv_v1.17-pre1_normalidade.csv  man-db_v2.13.1-pre1_normalidade.csv  nano_v8.4-pre1_normalidade.csv  parted_v3.4.64.2_normalidade.csv  psmisc_v23.7-rc1_normalidade.csv  sed_v4.8.44_normalidade.csv  tar_v1.35.90_normalidade.csv  wget_v1.25.0_normalidade.csv  xdg-user-dirs_v0.17_normalidade.csv
estatisticas/rankings/: podium_ctx1.csv  podium_ctx2.csv  rankings_ctx1.csv  rankings_ctx2.csv
estatisticas/testes/: dunn_por_arquivo.csv  dunn_por_nivel.csv  dunn_posthoc.csv  kruskal_wallis.csv  normalidade.csv  wilcoxon_pareado.csv
metrics_aggregated/aspell_v0.60.8.1/: aspell_v0.60.8.1.aggregated.csv
metrics_aggregated/bison-runtime_v3.5.90/: bison-runtime_v3.5.90.aggregated.csv
metrics_aggregated/diffutils_v3.10.242/: diffutils_v3.10.242.aggregated.csv
metrics_aggregated/exif_v0.6.22/: exif_v0.6.22.aggregated.csv
metrics_aggregated/gst-plugins-bad_v1.27.90/: gst-plugins-bad_v1.27.90.aggregated.csv
metrics_aggregated/gst-plugins-ugly_v1.27.90/: gst-plugins-ugly_v1.27.90.aggregated.csv
metrics_aggregated/gstreamer_v1.27.90/: gstreamer_v1.27.90.aggregated.csv
metrics_aggregated/gtkspell_v3.0.7/: gtkspell_v3.0.7.aggregated.csv
metrics_aggregated/libiconv_v1.17-pre1/: libiconv_v1.17-pre1.aggregated.csv
metrics_aggregated/man-db_v2.13.1-pre1/: man-db_v2.13.1-pre1.aggregated.csv
metrics_aggregated/nano_v8.4-pre1/: nano_v8.4-pre1.aggregated.csv
metrics_aggregated/parted_v3.4.64.2/: parted_v3.4.64.2.aggregated.csv
metrics_aggregated/psmisc_v23.7-rc1/: psmisc_v23.7-rc1.aggregated.csv
metrics_aggregated/sed_v4.8.44/: sed_v4.8.44.aggregated.csv
metrics_aggregated/tar_v1.35.90/: tar_v1.35.90.aggregated.csv
metrics_aggregated/wget_v1.25.0/: wget_v1.25.0.aggregated.csv
metrics_aggregated/xdg-user-dirs_v0.17/: xdg-user-dirs_v0.17.aggregated.csv
metrics_analisys/: aspell_analise.md  bison_analise.md  diffutils_analise.md  exif_analise.md  gst_bad_analise.md  gst_ugly_analise.md  gstreaner_analise.md  gtkspell_analise.md  libiconv_analise.md  man-db_analise.md  nano_analise.md  parted_analise.md  psmisc_analise.md  sed_analise.md  tar_analise.md  xdg-user-dirs_analise.md
metrics_analisys/nllb_evaluation/: per_file_updated_bleu_scores.csv
metrics_csv/aspell_v0.60.8.1/: aspell-0.60.8.1.pt_BR.llama.ctx-0.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.de.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.es.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.fr.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.id.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.ru.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-1.zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-es.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-fr.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-id.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-ru.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.de-zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.es-fr.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.es-id.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.es-ru.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.es-vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.es-zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.fr-id.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.fr-ru.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.fr-vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.fr-zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.id-ru.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.id-vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.id-zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.ru-vi.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.ru-zh_CN.po.meta.csv  aspell-0.60.8.1.pt_BR.llama.ctx-2.vi-zh_CN.po.meta.csv
metrics_csv/bison-runtime_v3.5.90/: bison-runtime-3.5.90.pt_BR.llama.ctx-0.po.meta.csv  (+28 more)
nllb_translations/: aspell-0.60.8.1.tsv  bison-runtime-3.5.90.tsv  diffutils-3.10.242.tsv  exif-0.6.22.tsv  gst-plugins-bad-1.27.90.tsv  gst-plugins-ugly-1.27.90.tsv  gstreamer-1.27.90.tsv  gtkspell-3.0.7.tsv  libiconv-1.17-pre1.tsv  man-db-2.13.1-pre1.tsv  nano-8.4-pre1.tsv  parted-3.4.64.2.tsv  psmisc-23.7-rc1.tsv  sed-4.8.44.tsv  tar-1.35.90.tsv  wget-1.25.0.tsv  xdg-user-dirs-0.17.tsv
src/: aggregate_metrics.py  generate_analysis.py  main.py  run.py  run_context_levels.py  run_experiments.py  run_metrics.py
utils/: alinhar_arquivos.py  baixar_projetos.py  verificar_projetos_completos.py
(+5055 files in other folders)
